# auction

./: Cargo.toml  README.md
benches/: auction.rs
src/: main.rs
src/engine/: mod.rs  model.rs
src/engine/matcher/: mod.rs  naive.rs
src/engine/matcher/stream/: highs.rs  mod.rs
src/service/: ingress.rs  matcher.rs  mod.rs  scheduler.rs  sequencer.rs
